<resources>
    <string name="app_name">MyContactsTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contact">Contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
</resources>